# download-ipadapter-for-comfyui

./: .gitignore  CREATE_MODEL_SOURCE.md  MODEL_SOURCE.md  README.md  download_qwen_image_models.sh  download_z_image_models.sh  pyproject.toml
comfydl/: civitai.py  config.py  main.py  registry.py  utils.py
comfydl/model_sources/: controlnet_sd15_canny_fp16.yaml  controlnet_sd15_depth.yaml  controlnet_sd15_inpaint_fp16.yaml  controlnet_sd15_ip2p.yaml  controlnet_sd15_lineart_anime.yaml  controlnet_sd15_lineart_anime_fp16.yaml  controlnet_sd15_lineart_fp16.yaml  controlnet_sd15_mlsd_fp16.yaml  controlnet_sd15_normalbae.yaml  controlnet_sd15_openpose_fp16.yaml  controlnet_sd15_scribble_fp16.yaml  controlnet_sd15_seg_fp16.yaml  controlnet_sd15_shuffle.yaml  controlnet_sd15_softedge_fp16.yaml  controlnet_sd15_t2i_adapter.yaml  controlnet_sd15_tile_fp16.yaml  controlnet_sdxl_t2i_adapter.yaml  cosmos_predict2_14b.yaml  cosmos_predict2_2b.yaml  flux.yaml  flux1_controlnet.yaml  flux1_dev_controlnet_union_pro_2.yaml  flux1_dev_controlnet_union_pro_2_fp8.yaml  flux1_dev_fp8.yaml  flux1_fill_dev.yaml  flux1_kontext_dev.yaml  flux1_krea_dev.yaml  flux1_pulid.yaml  flux1_t2i.yaml  flux1_uso.yaml  flux2.yaml  flux2_quantized.yaml  hidream_e1_1.yaml  hidream_e1_full.yaml  hidream_i1_dev.yaml  hidream_i1_fast.yaml  hidream_i1_full.yaml  hunyuan3d_2.yaml  hyper_flux_16step_lora.yaml  (+69 more)
scripts/: download-ipadapters.sh  download_flux2_models.sh  download_flux2_quantized_models.sh  download_flux_models.sh  download_qwen_image_edit_models.sh  download_z_image_models.sh
